output/david-cohan-test-441609ac-5d73-4060-aade-1d3350927e58/create-link1-575bba92-ae76-4033-bfce-9104a4911e12/apply/ingress-441609ac-5d73-4060-aade-1d3350927e58-1690197263-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.response-404: '{"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"404","messageBody":"no scopes exposed through this service."}}'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"alb.ingress.kubernetes.io/actions.response-404":"{\"type\":\"fixed-response\",\"fixedResponseConfig\":{\"contentType\":\"text/plain\",\"statusCode\":\"404\",\"messageBody\":\"no scopes exposed through this service.\"}}","alb.ingress.kubernetes.io/scheme":"internet-facing","alb.ingress.kubernetes.io/target-type":"ip","kubernetes.io/ingress.class":"alb"},"labels":{"nullplatform":"true","service":"david-cohan-te [...]
    kubernetes.io/ingress.class: alb
  creationTimestamp: "2025-06-24T15:23:58Z"
  generation: 1
  labels:
    nullplatform: "true"
    service: david-cohan-test
    service_id: 441609ac-5d73-4060-aade-1d3350927e58
  name: k-8-s-david-cohan-test-441609ac-5d73-4060-aade-1d3350927e58-public
  namespace: nullplatform
  resourceVersion: "6873"
  uid: 987e3ef9-2831-47cb-bba8-99fc1cbf1412
spec:
  ingressClassName: alb
  rules:
    - host: davidcohan.github.com
      http:
        paths:
          - backend:
              service:
                name: d-1690197263-197236571
                port:
                  number: 8080
            path: /exposer1
            pathType: Prefix
status:
  loadBalancer: {}
